--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-    "name": "@fract/react-alive",
-    "description": "React component to live connect a fractal application",
+    "name": "@whatsup-js/react-alive",
+    "description": "React component to live connect a Whats Up application",
     "version": "0.2.1",
     "author": "Denis Churbanov",
     "license": "MIT",
     "repository": {
         "type": "git",
-        "url": "https://github.com/fract/react-alive.git"
+        "url": "https://github.com/whatsup/react-alive.git"
     },
     "main": "dist/index.cjs.js",
     "module": "dist/index.esm.js",
@@ -21,10 +21,9 @@
     },
     "peerDependencies": {
         "react": "^16.0.0",
-        "@fract/core": "^0.2.2"
+        "whatsup": "^1.1.0"
     },
     "devDependencies": {
-        "@fract/core": "^0.2.2",
         "@rollup/plugin-commonjs": "^13.0.0",
         "@rollup/plugin-node-resolve": "^8.1.0",
         "@types/jest": "^26.0.4",
@@ -40,7 +39,8 @@
         "rollup-plugin-delete": "^2.0.0",
         "rollup-plugin-typescript2": "^0.27.1",
         "ts-jest": "^26.1.1",
-        "typescript": "^3.9.6"
+        "typescript": "^3.9.6",
+        "whatsup": "^1.1.0"
     },
     "files": [
         "dist",
