--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-    "name": "@whatsup/react-alive",
-    "description": "React component to live connect a Whats Up application",
+    "name": "@whatsup/react",
+    "description": "React component to connect a Whats Up application",
     "version": "0.3.0",
     "author": "Denis Churbanov",
     "license": "MIT",
     "repository": {
         "type": "git",
-        "url": "https://github.com/whatsup/react-alive.git"
+        "url": "https://github.com/whatsup/react.git"
     },
     "main": "dist/index.cjs.js",
     "module": "dist/index.esm.js",
